--- a/html/Appointment.html
+++ b/html/Appointment.html
@@ -182,7 +182,9 @@
                     }
                 } else {
                     if (FreeHours.every(hour => true)) {
-                        return `<button type="button" class="btn-sm disabled btn-outline-dark  mb-1">UNAVAILABLE</button>`;
+                        if(RepairType == "long"){return `<button type="button" class="btn-sm disabled btn-outline-dark  mb-1">${hour}:00-${hour + 4}:00</button>`;}
+                        else{return `<button type="button" class="btn-sm disabled btn-outline-dark  mb-1">${hour}:00-${hour + 1}:00</button>`;}
+                        
                     }
 
                     else { return '' }// Return empty string if hour is not available
@@ -255,7 +257,8 @@
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    MonthDisplay: currentDate.getMonth() + 1
+                    MonthDisplay: currentDate.getMonth() + 1,
+                    YearDisplay: currentDate.getFullYear()
                 }),
             })
                 .then(response => response.json())
@@ -277,7 +280,7 @@
             const WORK_DAY_END = new Date();
             WORK_DAY_END.setDate(dayOfMonth);
             WORK_DAY_END.setHours(18, 0, 0, 0); // 6 PM
-
+            
             // Create an array to store the intervals for the day
             const intervals = [];
 
@@ -426,11 +429,6 @@
                             dayCell.addEventListener('click', () => {
                                 // Remove active from previously selected
                                 document.querySelectorAll('.day').forEach(button => {
-                                    const repairTypeSelect = document.getElementById('repairType');
-                                    const repairTypeValue = repairTypeSelect.value;
-                                    if ((repairTypeValue == '1230')) {
-                                        GetCalendarInfo();
-                                    }
                                     button.classList.remove('active');
                                 });
                                 console.log(document.getElementById('time-container'));
