--- a/html/header.html
+++ b/html/header.html
@@ -81,8 +81,19 @@
                     <li class="nav-item nodisplay" id="timeTableButton" >
                         <a class="nav-link h3 mr-2 text-light" href="Appointment.html"> Make Appointment</a>
                     </li>   
+
                     <li class="nav-item nodisplay" id="workerButton" >
-                        <a class="nav-link h3 mr-2 text-light" href="WorkerPage.html"> Check Appointments</a>
+                        <li class="nav-item dropdown  dropdown-hover nodisplay" id="WorkerButtonDropDown" >
+                            <a class="nav-link h3 mr-2 text-light dropdown-toggle" alt="Click or press enter to expand" href="WorkerPage.html" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Check Appointments
+                            </a>
+                            <div class="dropup dropdown-menu "  aria-labelledby="accountDropdown">
+                                <a class="dropdown-item text-white" href="WorkerPage.html#WorkerviewTodaysProjects">View projects to be finished today</a>
+                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#WorkerviewDelayedProjects">View delayed projects</a>
+                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#WorkerviewActiveProjects">View active projects</a>
+
+                            </div>
+                        </li>
                     </li>   
                 </ul>
                 <ul class="navbar-nav ml-auto">
