More fixes to the worker page, prety much fully finished the worker page with all the funcions it should have imo, just maybe need a search option or like filters, maube

--- a/html/header.html
+++ b/html/header.html
@@ -84,14 +84,13 @@
 
                     <li class="nav-item nodisplay" id="workerButton" >
                         <li class="nav-item dropdown  dropdown-hover nodisplay" id="WorkerButtonDropDown" >
-                            <a class="nav-link h3 mr-2 text-light dropdown-toggle" alt="Click or press enter to expand" href="WorkerPage.html" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link h3 mr-2 text-light dropdown-toggle" alt="Click or press enter to expand" href="WorkerPage.html#WorkerviewTodaysProjects" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Check Appointments
                             </a>
                             <div class="dropup dropdown-menu "  aria-labelledby="accountDropdown">
                                 <a class="dropdown-item text-white" href="WorkerPage.html#WorkerviewTodaysProjects">View projects to be finished today</a>
                                 <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#WorkerviewDelayedProjects">View delayed projects</a>
                                 <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#WorkerviewActiveProjects">View active projects</a>
-
                             </div>
                         </li>
                     </li>   
