--- a/html/WorkerPage.html
+++ b/html/WorkerPage.html
@@ -14,6 +14,15 @@
    
 </head>
 <body>
+ 
+    <div class=" selectable nodisplay mt-4" id="userDataContainer">
+        <!-- User data will be dynamically added here -->
+        <div class=" container mt-4">
+            <div class="row row-cols-1 row-cols-md-3">
+                <!-- User cards will be dynamically added here -->
+            </div>
+        </div>
+    </div>
     <div class=" selectable nodisplay mt-4" id="ProjectDataContainer">
         <!-- User data will be dynamically added here -->
         <div class="container mt-4">
@@ -21,9 +30,20 @@
                 <!-- User cards will be dynamically added here -->
             </div>
             
+        </div>
     </div>
+
+    <div id="inputNewEndDate"class=" col-sm-3 bg-light nodisplay" style="margin-top: -20%">
+    <div  class="col-sm-3 text-center nodisplay  bg-light"></div>
+    <h3 class=" text-white">Enter the new end date for project: <span id="project_id"></span> (if the project isnt
+        yet tagged as "Delayed" it will after these changes) </h3>
+    <span id="InvalidDateTime" class="nodisplay" style="color:rgb(255, 0, 0)"><b>Invalid end time</b></span>
+    <br>
+    <input type="datetime-local" id="dateinput" class="form-control" onkeypress="handleEndDateKeyPress(event)">
+    <button class="btn btn-outline-primary mt-2"
+        onclick="projectChangeEndTimeByWorker(document.getElementById('project_id').textContent, document.getElementById('dateinput').value)">Change</button>
     </div>
-    
+    <div>
 <script>
 // Function to call the appropriate function based on the hash
 function handleHashChange() {
