Initial store page

--- a/html/header.html
+++ b/html/header.html
@@ -71,8 +71,20 @@
                         <a class="nav-link h3 mr-2 text-light"  href="Home.html" >Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h3 mr-2 text-light" href="AboutUs.html">About us</a>
+                        <a class="nav-link h3 mr-2 text-light" href="AboutUs.html">About-us</a>
                     </li>
+                    <li class="nav-item" id="StoreButton" >
+                        <li class="nav-item dropdown  dropdown-hover" id="StoreButtonDropDown" >
+                            <a class="nav-link h3 mr-2 text-light dropdown-toggle" alt="Click or press enter to expand" href="WorkerPage.html#WorkerviewTodaysProjects" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Store
+                            </a>
+                            <div class="dropup dropdown-menu w-auto"  aria-labelledby="accountDropdown">
+                                <a class="dropdown-item   text-white" href="StorePage.html#CarCategories">Parts</a>
+                                <a class="bg-gray dropdown-item  text-white" href="StorePage.html#Other">Other</a>
+
+                            </div>
+                        </li>
+                    </li>   
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item nodisplay" id="estimatorButton" >
@@ -81,6 +93,7 @@
                     <li class="nav-item nodisplay" id="timeTableButton" >
                         <a class="nav-link h3 mr-2 text-light" href="Appointment.html"> Make Appointment</a>
                     </li>   
+                    
 
                     <li class="nav-item nodisplay" id="workerButton" >
                         <li class="nav-item dropdown  dropdown-hover nodisplay" id="WorkerButtonDropDown" >
@@ -106,7 +119,6 @@
                         <div class="dropup dropdown-menu "  aria-labelledby="accountDropdown">
                             <a class=" dropdown-item text-white" href="Profile.html">Account Info</a>
                             <a class=" bg-gray dropdown-item text-white " href="Deals.html">Special Deals</a>
-                            <a class=" bg-gray dropdown-item text-white " href="Settings.html">Settings</a>
                             <a id="AdminMenu"class=" bg-gray dropdown-item text-white nodisplay " href="Admin.html">Admin panel</a>
                             <a id="Statistics"class=" bg-gray dropdown-item text-white nodisplay " href="Statistics.html">Statistics</a>
                             <div class="bg-gray" style="height:20px"><div class=" custom-divider"></div></div>
