Added UserAppointment page

--- a/html/header.html
+++ b/html/header.html
@@ -105,7 +105,7 @@
                         </a>
                         <div class="dropup dropdown-menu "  aria-labelledby="accountDropdown">
                             <a class=" dropdown-item text-white" href="Profile.html">Account Info</a>
-                            <a class=" bg-gray dropdown-item text-white " href="Deals.html">Special Deals</a>
+                            <a class=" bg-gray dropdown-item text-white " href="UserAppointment.html">Appointments</a>
                             <a class=" bg-gray dropdown-item text-white " href="Settings.html">Settings</a>
                             <a id="AdminMenu"class=" bg-gray dropdown-item text-white nodisplay " href="Admin.html">Admin panel</a>
                             <a id="Statistics"class=" bg-gray dropdown-item text-white nodisplay " href="Statistics.html">Statistics</a>
