EPIC TABLES instead of lame squares AND sorting by chosen rows

--- a/html/Appointment.html
+++ b/html/Appointment.html
@@ -55,10 +55,10 @@
                         <!-- Choices for time will dynamically appear here-->
                     </div>
                     <div class="form-group mt-2">
-                        <label class="form-label" for="additionalInfo">Additional Information</label>
-                        <textarea class="form-control" id="additionalInfo" name="additionalInfo" rows="1"
-                            placeholder="Enter any additional information about the appointment"
-                            maxlength="255"></textarea>
+                        <label class="form-label" for="additionalInfo">Car info / Additional info</label>
+                        <textarea class="form-control" id="additionalInfo" name="additionalInfo" rows="2"
+                            placeholder="Enter a vehicle description and any other information about the appointment"
+                            maxlength="255" required></textarea>
                     </div>
                     <div class="">
                         <button type="submit" class="btn btn-outline-secondary ">Make Appointment</button>
