Pretty much fully finished worker page, beauuutifully, now todo the same thing for admin page + add a sidebar which has options to search by ID etc

--- a/html/header.html
+++ b/html/header.html
@@ -88,9 +88,9 @@
                                 Check Appointments
                             </a>
                             <div class="dropup dropdown-menu "  aria-labelledby="accountDropdown">
-                                <a class="dropdown-item text-white" href="WorkerPage.html#WorkerviewTodaysProjects">View projects to be finished today</a>
-                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#WorkerviewDelayedProjects">View delayed projects</a>
-                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#WorkerviewActiveProjects">View active projects</a>
+                                <a class="dropdown-item text-white" href="WorkerPage.html#searchTodaysProjects">View projects to be finished today</a>
+                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#searchDelayedProjects">View delayed projects</a>
+                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#searchActiveProjects">View active projects</a>
                             </div>
                         </li>
                     </li>   
