--- a/html/WorkerPage.html
+++ b/html/WorkerPage.html
@@ -16,14 +16,14 @@
 
 <body>
     <div class="container my-4 bg-light">
-        <h2 class="text-center mb-4 text-white" id="ProjectHeader">Projects</h2>
+        <h2 class="text-center mb-4 text-white" id="TitleHeader">Projects</h2>
 
         <!-- Table to display appointment data -->
         <div style="overflow-x: auto;" id="ProjectDataContainer" class="table-responsive text-white">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
                     <tr>
-                        <th class="align-middle" scope="col" data-column="idUser">User ID</th>
+                        <th class="align-middle" scope="col" data-column="idUser">Username</th>
                         <th class="align-middle" scope="col" data-column="StartDate">Start Date</th>
                         <th class="align-middle" scope="col" data-column="EndDateProjection">Projected End Date</th>
                         <th class="align-middle" scope="col" data-column="ProjectInfo">Project Info</th>
@@ -36,7 +36,7 @@
             </table>
         </div>
         <!-- Table to display user data -->
-        <div id="userDataContainer" class="table-responsive text-white">
+        <div style="overflow-x: auto;"  id="userDataContainer" class="table-responsive text-white">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
                     <tr>
@@ -54,7 +54,7 @@
         </div>
 
 
-        <div id="inputNewEndDate" class="table-responsive bg-light nodisplay">
+        <div style="overflow-x: auto;"  id="inputNewEndDate" class="table-responsive bg-light nodisplay">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
                     <tr>
@@ -143,7 +143,7 @@
 
             // Original header text for each column
             const headerText = {
-                idUser: 'User ID',
+                idUser: 'Username',
                 StartDate: 'Start Date',
                 EndDateProjection: 'End Date Projection',
                 ProjectInfo: 'Project Info',
@@ -174,10 +174,10 @@
                     // User ID
                     const userIDcell = document.createElement('td');
                     const userLink = document.createElement('a');
-                    userLink.textContent = appointment.idUser;
+                    userLink.textContent =  appointment.UserName + ` (${appointment.idUser})`;
                     userLink.href = '#';
                     userLink.style.color = 'blue';
-                    userLink.style.fontSize = '22px';
+
 
                     userLink.onclick = function () {
                         searchUserByID(appointment.idUser);
@@ -349,7 +349,7 @@
                 .then(response => response.json())
                 .then(data => {
                     // Call a function to display the user data on the page
-                    const title = document.getElementById('ProjectHeader');
+                    const title = document.getElementById('TitleHeader');
                     title.innerHTML = `To be finished today`;
                     displayProjectDataForWorker(data);
 
@@ -366,7 +366,7 @@
                 .then(response => response.json())
                 .then(data => {
                     // Call a function to display the user data on the page
-                    const title = document.getElementById('ProjectHeader');
+                    const title = document.getElementById('TitleHeader');
                     title.innerHTML = `Active projects`;
                     displayProjectDataForWorker(data);
 
@@ -382,7 +382,7 @@
                 .then(response => response.json())
                 .then(data => {
                     // Call a function to display the user data on the page
-                    const title = document.getElementById('ProjectHeader');
+                    const title = document.getElementById('TitleHeader');
                     title.innerHTML = `Delayed projects`;
                     displayProjectDataForWorker(data);
                 })
@@ -406,7 +406,7 @@
                 .then(data => {
                     // Call a function to display the user data on the page
                     if (data[0]) {
-                        const title = document.getElementById('ProjectHeader');
+                        const title = document.getElementById('TitleHeader');
                         title.innerHTML = `Users data`;
                         displayUserDataForWorker(data);
                     }
@@ -432,7 +432,7 @@
                 .then(data => {
                     // Call a function to display the user data on the page
                     if (data[0]) {
-                        const title = document.getElementById('ProjectHeader');
+                        const title = document.getElementById('TitleHeader');
                         title.innerHTML = `Users Projects`;
                         displayProjectDataForWorker(data);
                     }
