--- a/Correctrly_structured_project/public/header.html
+++ b/Correctrly_structured_project/public/header.html
@@ -69,18 +69,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul  class="navbar-nav ">
                     <li  class="nav-item">
-                        <a class="nav-link h3 mr-2 text-light"  href="Home.html" >Services</a>
+                        <a class="nav-link h3 mr-2 text-light"  href="/" >Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h3 mr-2 text-light" href="AboutUs.html">About us</a>
+                        <a class="nav-link h3 mr-2 text-light" href="/AboutUs">About us</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item nodisplay" id="estimatorButton" >
-                        <a class="nav-link h3 mr-2 text-light" href="Estimator.html">Price Estimator</a>
+                        <a class="nav-link h3 mr-2 text-light" href="/Estimator">Price Estimator</a>
                     </li>
                     <li class="nav-item nodisplay" id="timeTableButton" >
-                        <a class="nav-link h3 mr-2 text-light" href="Appointment.html"> Make Appointment</a>
+                        <a class="nav-link h3 mr-2 text-light" href="/Appointments"> Make Appointment</a>
                     </li>   
 
                     <li class="nav-item nodisplay" id="workerButton" >
@@ -89,33 +89,33 @@
                                 Check Appointments
                             </a>
                             <div class="dropup dropdown-menu "  aria-labelledby="accountDropdown">
-                                <a class="dropdown-item text-white" href="WorkerPage.html#searchTodaysProjects">View projects to be finished today</a>
-                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#searchDelayedProjects">View delayed projects</a>
-                                <a class="bg-gray dropdown-item text-white" href="WorkerPage.html#searchActiveProjects">View active projects</a>
+                                <a class="dropdown-item text-white" href="/WorkerPage#searchTodaysProjects">View projects to be finished today</a>
+                                <a class="bg-gray dropdown-item text-white" href="/WorkerPage#searchDelayedProjects">View delayed projects</a>
+                                <a class="bg-gray dropdown-item text-white" href="/WorkerPage#searchActiveProjects">View active projects</a>
                             </div>
                         </li>
                     </li>   
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item" id="LoginButton" >
-                        <a class="nav-link h3   mr-2 text-light" href="Login.html">Login</a>
+                        <a class="nav-link h3   mr-2 text-light" href="/Login">Login</a>
                     </li>
                     <li class="nav-item dropdown  dropdown-hover nodisplay" id="LogOutButton" >
                         <a class="nav-link h3 mr-2 text-light dropdown-toggle" alt="Click or press enter to expand" href="#" id="accountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Profile
                         </a>
                         <div class="dropup dropdown-menu "  aria-labelledby="accountDropdown">
-                            <a class=" dropdown-item text-white" href="Profile.html">Account Info</a>
-                            <a class=" bg-gray dropdown-item text-white " href="UserAppointment.html">Appointments</a>
-                            <a class=" bg-gray dropdown-item text-white " href="Settings.html">Settings</a>
-                            <a id="AdminMenu"class=" bg-gray dropdown-item text-white nodisplay " href="Admin.html">Admin panel</a>
-                            <a id="Statistics"class=" bg-gray dropdown-item text-white nodisplay " href="Statistics.html">Statistics</a>
+                            <a class=" dropdown-item text-white" href="/Profile">Account Info</a>
+                            <a class=" bg-gray dropdown-item text-white " href="/UserAppointment">Appointments</a>
+                            <a class=" bg-gray dropdown-item text-white " href="/Settings">Settings</a>
+                            <a id="AdminMenu"class=" bg-gray dropdown-item text-white nodisplay " href="/admin/admin-dashboard">Admin panel</a>
+                            <a id="Statistics"class=" bg-gray dropdown-item text-white nodisplay " href="/Statistics">Statistics</a>
                             <div class="bg-gray" style="height:20px"><div class=" custom-divider"></div></div>
                             <a tabindex=0 class=" bg-gray dropdown-item-logout text-red " style="cursor: pointer;" id="Log-out-button" onclick="LogOut()">Log Out</a>
                         </div>
                     </li>
                     
-                        <a class="nav-link h3 mr-2 text-light" href="SignUp.html" id="SignUpButton">Sign Up</a>
+                        <a class="nav-link h3 mr-2 text-light" href="/SignUp" id="SignUpButton">Sign Up</a>
                     </li>
 
                 </ul>
